--- a/ExcelTestForSchool/App.config
+++ b/ExcelTestForSchool/App.config
@@ -8,8 +8,7 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
   </startup>
   <connectionStrings>
-    <add name="School5Entities" connectionString="metadata=res://*/DataBase.Model1.csdl|res://*/DataBase.Model1.ssdl|res://*/DataBase.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=sql-ser-larisa\serv1215;initial catalog=School5;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="School6Entities" connectionString="metadata=res://*/DataBase.Model1.csdl|res://*/DataBase.Model1.ssdl|res://*/DataBase.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=User-Pc\sqlexpress;initial catalog=School6;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="School6Entities1" connectionString="metadata=res://*/DataBase.Model1.csdl|res://*/DataBase.Model1.ssdl|res://*/DataBase.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=sql-ser-larisa\serv1215;initial catalog=School6;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
